@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-07-13T08:29:07Z",
+  "timestamp" : "2022-07-13T16:36:04Z",
   "count_outdated" : 236,
   "uniques_outdated" : 113,
-  "count" : 262,
-  "uniques" : 128,
+  "count" : 263,
+  "uniques" : 129,
   "clones" : [
     {
       "timestamp": "2022-06-29T00:00:00Z",
@@ -100,6 +100,13 @@
       "timestamp": "2022-07-12T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-13T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
